Register form validation

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,6 @@ html(lang='en')
   head
     title Welcome
     link(href='/stylesheets/bootstrap.css', rel='stylesheet')
-    link(href='/stylesheets/style.css', rel='stylesheet')
   body
     .navbar.navbar-default(role='navigation')
       .container
@@ -29,4 +28,4 @@ html(lang='en')
      block content
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
-    script(src='javascripts/bootstrap.js')
+    script(src='/javascripts/bootstrap.js')
