User model and registration

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html(lang='en')
   head
     title Welcome
     link(href='/stylesheets/bootstrap.css', rel='stylesheet')
+    link(href='/stylesheets/style.css', rel='stylesheet')
   body
     .navbar.navbar-default(role='navigation')
       .container
@@ -25,7 +26,8 @@ html(lang='en')
            li
               a(href='/users/logout') Logout
     .container
-     block content
+      != messages()
+      block content
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/javascripts/bootstrap.js')
